<resources>
    <string name="app_name">Notifyplus</string>
    <string name="navigation_drawer_open">باز کردن منوی کناری</string>
    <string name="navigation_drawer_close">بستن منوی کناری</string>
    <string name="supernotiftitle">آگاه ساز ویژه</string>
    <string name="supernotifsummary">یک آگاه ساز مخصوص حاوی 50 میانبر برنامه فعال خواهد شد</string>
    <string name="reboottitle">شروع خودکار</string>
    <string name="rebootsummary">فعال کردن آگاه ساز بعد از راه اندازی مجدد دستگاه</string>
    <string name="ratetitle">نظر در بازار</string>
    <string name="ratesummary">لطفا اگر از عملکرد برنامه راضی بوده اید به آن 5 ستاره بدهید</string>
    <string name="enable_notification">روشن کردن آگاه ساز</string>
    <string name="enabling_the_notification">روشن/خاموش کردن آگاه ساز</string>
    <string name="label_alpha">شدت رنگ </string>
    <string name="label_red">قرمز</string>
    <string name="label_green">سبز </string>
    <string name="label_blue"> آبی</string>
    <string name="button_set_color">اعمال تغییرات </string>
    <string name="apps_per_row">تعداد برنامه ها</string>
    <string name="number_of_apps_in_the_notification">تعداد میانبر برنامه ها در آگاه ساز</string>
    <string name="background_color">رنگ پس زمینه</string>
    <string name="background_color_of_the_notification">رنگ پس زمینه برای آگاه ساز</string>
    <string name="home">خانه</string>
    <string name="settings">تنظیمات</string>

    <string name="contact_us">تماس با توسعه دهنده</string>
    <string name="helpstring1">ضمن تشکر از اینکه این برنامه را نصب نموده اید , نحوه ی عملکرد آن را در این قسمت مطالعه می فرمایید:</string>
    <string name="helpstring2">با روشن کردن تیک فعال سازی برنامه در قسمت « روشن کردن آگاه ساز » به 7 عدد میانبر در نوار اعلان دستگاه تان دسترسی خواهید داشت که با برنامه ریزی مناسب این میانبر ها , می توانید اپلیکیشن های دلخواه تان را در کمترین زمان ممکن فراخوانی کنید.</string>
    <string name="helpstring3">در صفحه ی اصلی برنامه , با لمس کردن هر یک از کلیدهای بالای صفحه که به شکل آیکون برنامه می باشند , یک لیست از تمام برنامه های نصب شده در دستگاه نمایش داده خواهد شد که با لمس هرکدام از برنامه ها , آن برنامه برای آن میانبر در نوتیفیکیشن برنامه اعمال خواهد شد . ( بسته به نوع دستگاه تان ممکن است لیست برنامه ها با اندکی تاخیر نشان داده شود , لطفا شکیبا باشید. )</string>
    <string name="helpstring4">در صفحه ی اصلی برنامه , با لمس هرکدام از المان های « تعداد برنامه ها » و « رنگ پس زمینه » شما می توانید علاوه بر تغییر دادن تعداد میانبر هایی که در نوتیفیکیشن نشان داده می شوند , رنگ پس زمینه ی آن را نیز به دلخواه خودتان تغییر دهید.</string>
    <string name="helpstring5">این اپلیکیشن ایرانی هیچ مورد مشابهی در کافه بازار ندارد و فعلا به صورت کاملاً رایگان منتشر شده است.</string>
    <string name="darbaretitle">درباره ی برنامه</string>
    <string name="help">درباره ی برنامه</string>
    <string name="enable_on_reboot">شروع خودکار</string>
    <string name="enable_on_reboot_righo">فعال کردن آگاه ساز بعد از راه اندازی مجدد دستگاه</string>
    <string name="nazar_dar_bazar">نظر در بازار</string>
    <string name="nazar_dar_bazar_righo">لطفا اگر از عملکرد برنامه راضی بوده اید به آن 5 ستاره بدهید</string>
    <string name="exit">خروج</string>
    <string name="back">بازگشت</string>
    <string name="tu">طراحی و برنامه نویسی شده توسط :</string>
    <string name="hojat72elect">hojat72elect</string>
    <string name="telegram">تلگرام ما</string>
    <string name="instagram">اینستاگرام ما</string>
    <string name="share">به اشتراک گذاری</string>
    <string name="send_to">این برنامه را با دوستان خود به اشتراک بگذارید</string>
    <string name="sharetext">هر کدام از برنامه های مورد علاقه تان را در کمتر از 3 ثانیه باز کنید!!!</string>
    <string name="errortelegram">مشکل در اتصال به سرور تلگرام</string>
    <string name="adstring">آرشیو کاملی از موسیقی متن فیلم های روز دنیا با کیفیت خارق العاده ی FLAC</string>
    <string name="adstring2">WWW.SOUNDTRACKHA.IR</string>
</resources>
