<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scroller"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/am1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:text="@string/helpstring1"
            android:textSize="18sp" />

        <view
            class="android.view.View"
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="15sp"
            android:layout_marginRight="10sp"
            android:background="#5000" />

        <TextView
            android:id="@+id/am2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:text="@string/helpstring2"
            android:textSize="18sp" />

        <view
            class="android.view.View"
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="15sp"
            android:layout_marginRight="10sp"
            android:background="#5000" />

        <TextView
            android:id="@+id/am3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:text="@string/helpstring3"
            android:textSize="18sp" />

        <view
            class="android.view.View"
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="15sp"
            android:layout_marginRight="10sp"
            android:background="#5000" />

        <TextView
            android:id="@+id/am4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:text="@string/helpstring4"
            android:textSize="18sp" />


    </LinearLayout>
</ScrollView>
